tests/NormalTests/paczka1/fuzzy1/85275660.err
Error in line 3: myxq3 S912 87,5
Error in line 11: BttP S912 17,0
Error in line 16: S912 S871 32,8
Error in line 18: myxq3 S220 65,3
Error in line 15: BttP S467 70,7
Error in line 35: S912 S912 16,6
